--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,4 +56,5 @@ jobs:
           cd publish || exit 1
           for file in $(ls); do
             curl -i "https://purge.jsdelivr.net/gh/${{ github.repository }}@release/${file}"
+            echo "https://purge.jsdelivr.net/gh/${{ github.repository }}@release/${file}"
           done
